record studio app update

--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -1,3 +1,49 @@
+
+
+<section class="dpro-section" id="mwfbiz">
+  <div class="dpro-section-content">
+    <h2 class="mb-0">A M R I T<font size="6"> Advance Media Representational Information Technologies</font></span></h2>
+    <div style="margin-top:20px;"><font color="#ffffff"><a href="https://amrit-corp.com/"><img src="https://amrit-corp.com/corp-drive/imgsource/titlelogo.png" style="width:100px;"></a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/privacy-policy" style="color:#ccc;">Privacy</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/terms-of-service" style="color:#ccc;">Terms</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/units/" style="color:#ccc;">Operational units</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/nav/investor" style="color:#ccc;">Investor relations</a></font></div>
+    <br>
+    <h3 class="mb-0"><a href="https://mwfbiz.com" style="color:white !important;text-transform:none;text-decoration: none;">🌐 mwfbiz.COM</a></h3>
+    <details open><summary class="subheading mb-3" style="background-color:#000000d7;max-width:250px;padding-left:5px;">ENHANCING SOCIETAL VALUES</summary>
+      <p style="background-color: #ffffffd7;padding:5px;color:#535353;border-radius: 5px;">A revolutionary platform committed to elevating societal values by offering curated and guided information. In an era overwhelmed with information and viewpoints, moof biz dot com stands out as a guiding light, steering individuals towards well-informed decisions that contribute positively to society.</p>
+    </details>
+    
+    </div>
+    <div class="d-flex flex-column flex-md-row justify-content-between">
+      <div class="flex-grow-1">
+        <div class="icons">
+          <div class="social-icons">
+            <a class="social-icon" href="https://www.linkedin.com/company/mind-without-fear"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://www.youtube.com/channel/UCWql3hkAsRBCQAb0SKf3eaw"><i class="fab fa-youtube"></i></a>
+            <a class="social-icon" href="https://www.facebook.com/mindwithoutfearMWF"><i class="fab fa-facebook-f"></i></a>
+            <a class="social-icon" href="https://www.instagram.com/mwfbiz"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<br><br><br>
+  <div class="d-flex flex-column flex-md-row justify-content-between">
+    <div class="flex-grow-1">
+      <h3 class="mb-0"><a href="https://mastrowall.com" style="color:white !important;text-decoration: none;">M A S T R O W A L L</a> <a href="https://mastrowall.in" style="text-transform: capitalize;color:#d7d7d7 !important;">In</a></h3>
+    <details open><summary class="subheading mb-3" style="background-color:#000000d7;max-width:180px;padding-left:5px;">AN ART OF LEARNING</summary>
+      <p style="background-color: #ffffffd7;padding:5px;color:#535353;border-radius: 5px;">A Learning Assistance is a major systematic approach for managing and improving the match between available resources and the learning potential of the large and diverse student body. An academic support program designed to assist online students with programs and services to give them course satisfaction and success.</p>
+    </details>
+      <div class="icons">
+        <div class="social-icons">
+          <a class="social-icon" href="https://www.linkedin.com/company/mastrowall"><i class="fab fa-linkedin-in"></i></a>
+          <a class="social-icon" href="https://www.youtube.com/channel/UCsPlopAo5IS5r9nrG9REUrw/"><i class="fab fa-youtube"></i></a>
+          <a class="social-icon" href="https://www.facebook.com/mastrowall"><i class="fab fa-facebook-f"></i></a>
+          <a class="social-icon" href="https://www.instagram.com/mastrowall"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+<hr class="hr-dpro-sec" />
 <section class="dpro-section" id="dasesd">
     <div class="dpro-section-content">
       <h2 class="mb-5">@itsEsD</h2>
@@ -18,53 +64,7 @@
     </div>
   </section>
   <hr class="hr-dpro-sec" />
-  <section class="dpro-section" id="mwfbiz">
-    <div class="dpro-section-content">
-      <h2 class="mb-0">A M R I T<font size="6"> Advance Media Representational Information Technologies</font></span></h2>
-      <div style="margin-top:20px;"><font color="#ffffff"><a href="https://amrit-corp.com/"><img src="https://amrit-corp.com/corp-drive/imgsource/titlelogo.png" style="width:100px;"></a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/privacy-policy" style="color:#ccc;">Privacy</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/terms-of-service" style="color:#ccc;">Terms</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/units/" style="color:#ccc;">Operational units</a>&nbsp;|&nbsp;<a target="_blank" href="https://amrit-corp.com/nav/investor" style="color:#ccc;">Investor relations</a></font></div>
-      <br>
-      <h3 class="mb-0"><a href="https://mwfbiz.com" style="color:white !important;text-transform:none;text-decoration: none;">🌐 mwfbiz.COM</a></h3>
-      <details open><summary class="subheading mb-3" style="background-color:#000000d7;max-width:250px;padding-left:5px;">ENHANCING SOCIETAL VALUES</summary>
-        <p style="background-color: #ffffffd7;padding:5px;color:#535353;border-radius: 5px;">A revolutionary platform committed to elevating societal values by offering curated and guided information. In an era overwhelmed with information and viewpoints, moof biz dot com stands out as a guiding light, steering individuals towards well-informed decisions that contribute positively to society.</p>
-      </details>
-      
-      </div>
-      <div class="d-flex flex-column flex-md-row justify-content-between">
-        <div class="flex-grow-1">
-          <div class="icons">
-            <div class="social-icons">
-              <a class="social-icon" href="https://www.linkedin.com/company/mind-without-fear"><i class="fab fa-linkedin-in"></i></a>
-              <a class="social-icon" href="https://www.youtube.com/channel/UCWql3hkAsRBCQAb0SKf3eaw"><i class="fab fa-youtube"></i></a>
-              <a class="social-icon" href="https://www.facebook.com/mindwithoutfearMWF"><i class="fab fa-facebook-f"></i></a>
-              <a class="social-icon" href="https://www.instagram.com/mwfbiz"><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-<br><br><br>
-    <div class="d-flex flex-column flex-md-row justify-content-between">
-      <div class="flex-grow-1">
-        <h3 class="mb-0"><a href="https://mastrowall.com" style="color:white !important;text-decoration: none;">M A S T R O W A L L</a> <a href="https://mastrowall.in" style="text-transform: capitalize;color:#d7d7d7 !important;">In</a></h3>
-      <details open><summary class="subheading mb-3" style="background-color:#000000d7;max-width:180px;padding-left:5px;">AN ART OF LEARNING</summary>
-        <p style="background-color: #ffffffd7;padding:5px;color:#535353;border-radius: 5px;">A Learning Assistance is a major systematic approach for managing and improving the match between available resources and the learning potential of the large and diverse student body. An academic support program designed to assist online students with programs and services to give them course satisfaction and success.</p>
-      </details>
-        <div class="icons">
-          <div class="social-icons">
-            <a class="social-icon" href="https://www.linkedin.com/company/mastrowall"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="https://www.youtube.com/channel/UCsPlopAo5IS5r9nrG9REUrw/"><i class="fab fa-youtube"></i></a>
-            <a class="social-icon" href="https://www.facebook.com/mastrowall"><i class="fab fa-facebook-f"></i></a>
-            <a class="social-icon" href="https://www.instagram.com/mastrowall"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
-  <hr class="hr-dpro-sec" />
-  
-  <hr class="hr-dpro-sec" />
-  
+ 
   <section class="dpro-section" id="dsonic">
     <div class="d-flex flex-column flex-md-row justify-content-between">
       <div class="flex-grow-1">
@@ -220,7 +220,9 @@
   <section>
     <center><div id="intros">INTRO</div></center>
   </section>
-  
+  <section>
+    <center><div id="recordap"><span id="clsrecrdap" onclick="document.getElementById('recordap').style.display='none';">&times;</span><iframe src="/audios/index.html"></iframe></div></center>
+  </section>
   <script>
       $('#newsmag').click(function(){
     $('#quicknews').slideDown('fast');
