--- a/app/audioplayer/index.html
+++ b/app/audioplayer/index.html
@@ -469,7 +469,7 @@
                 maxlength="30"
               /><input
                 type="submit"
-                value="Get Link"
+                value="Play"
                 style="background-color: rgb(24, 145, 16); color: white"
               /><input
                 type="button"
