--- a/divsec/conas.html
+++ b/divsec/conas.html
@@ -46,6 +46,12 @@
           <a class="btn btn-dark" href="https://info.soubhikdas.in/qubits"
             >[ QuBits ]</a
           >
+          <a class="btn btn-dark" href="https://soubhikdas.in/app/audioplayer/"
+            >Audio Player</a
+          >
+          <a class="btn btn-dark" href="https://soubhikdas.in/app/pdfviewer/"
+            >PDf Viewer</a
+          >
         </div>
         <br /><br />
         <div class="social-icons">
