--- a/app/audioplayer/index.html
+++ b/app/audioplayer/index.html
@@ -33,7 +33,7 @@
       position: fixed;
       right: 0;
       top: 0;
-      z-index: -1;
+      z-index: 1000;
     }
 
     /* KEYFRAMES */
@@ -264,9 +264,9 @@
       -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
         inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
       -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
-        inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+        inset 0px 10px 30px 5px rgb(251, 145, 145, 1);
       box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
-        inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+        inset 0px 10px 30px 5px rgba(198, 248, 141, 0.717);
 
       height: 200px;
       position: absolute;
