--- a/app/audioplayer/index.html
+++ b/app/audioplayer/index.html
@@ -441,7 +441,7 @@
           ><a target="_blank" href="https://soubhikdas.in"
             >Es D | www.soubhikdas.in</a
           ></span
-        >
+        ><span style="float: right">🎼</span>
         <span class="sticon">
           <div class="crtlnkdv" id="crtlnkdv">
             <form id="audioForm">
