--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="dpro-section-content">
           <h1 class="mb-0">Er. Soubhik <span>Das</span> </h1>
           <div class="subheading mb-5"> +91 95932 26819 <a href="mailto:d.soubhik@outlook.com" style="text-transform: lowercase;color:#dadada9c">d.soubhik@outlook.com</a> </div>
-          <p class="lead mb-5">Web / Software || Music  || IOT || .. etc.<br>..“What is the meaning of life?” may be the stereotypical philosophical question, supposedly abstract and pointless, but it bares its teeth when you phrase it like this: “What is the meaning of my life?”</p>
+          <p class="lead mb-5">Web / Software || Music  || IOT || Electrical Engg.<br>..“What is the meaning of life?” may be the stereotypical philosophical question, supposedly abstract and pointless, but it bares its teeth when you phrase it like this: “What is the meaning of my life?”</p>
           <div class="social-icons"> <a class="social-icon" href="https://www.linkedin.com/in/soubhik-das"><i class="fab fa-linkedin-in"></i></a> <a class="social-icon" href="https://github.com/das-esd"><i class="fab fa-github"></i></a> 
         </div>
         
