--- a/dquote-e/index.html
+++ b/dquote-e/index.html
@@ -287,7 +287,7 @@
       </div>
 
       <br />
-      <div class="container">
+      <div class="container ppthought">
         <div class="row">
           <div class="col-md-12 col-sm-12">
             <!-- SECTION TITLE -->
@@ -415,7 +415,7 @@
         </div>
       </div>
       <br />
-      <div class="container">
+      <div class="container ppthought">
         <div class="row">
           <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.5s">
             <!-- WORK THUMB -->
@@ -478,23 +478,42 @@
               </a>
             </div>
           </div>
-
-          <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.5s">
-            <!-- WORK THUMB -->
+          <div class="wow fadeInUp col-md-12" data-wow-delay="0.5s">
             <div class="work-thumb">
-              <a href="images/bpt4.jpg" class="image-popup">
-                <img src="images/bpt4.jpg" class="img-responsive" alt="eS D" />
+              <a href="https://i.imgur.com/wYhpGY5.png" class="image-popup">
+                <img
+                  src="https://i.imgur.com/wYhpGY5.png"
+                  class="img-responsive"
+                  alt="eS D"
+                />
               </a>
             </div>
-            <h4>
-              নিরুদ্দেশ<br />
-              ---------------------<br />
-              কেউ রয়ে যায় কাহানীতে, কেউ হয়ে যায় কাহিনী/ আবার কেউ বাহিনী হয়ে
-              গড়ে তোলে নতুন কাহিনী।।/ হয়তো সেটা হতে পারে পুরানো ছবির দেশ/ রাজ
-              রাজাদের খেলা ছিল, ছিল নানান ভেশ।।/ তোমার স্বপ্ন আছে মধুর, আছে কত
-              আবেশ/ মৌমাছি তো গুনগুনিয়ে হলো নিরুদ্দেশ।।/ হয়তো সাথে দেখতে পারি
-              নতুন আশার আলো/ তোমার কাহিনীতে বাহিনী হয়ে, দিন রাত্রির আলো।।
-            </h4>
+          </div>
+          <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.5s">
+            <!-- WORK THUMB -->
+            <div class="row">
+              <div class="work-thumb col-md-6">
+                <a href="images/bpt4.jpg" class="image-popup">
+                  <img
+                    src="images/bpt4.jpg"
+                    class="img-responsive"
+                    alt="eS D"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6">
+                <h4>
+                  নিরুদ্দেশ<br />
+                  ---------------------<br />
+                  কেউ রয়ে যায় কাহানীতে, কেউ হয়ে যায় কাহিনী/ আবার কেউ বাহিনী
+                  হয়ে গড়ে তোলে নতুন কাহিনী।।/ হয়তো সেটা হতে পারে পুরানো ছবির
+                  দেশ/ রাজ রাজাদের খেলা ছিল, ছিল নানান ভেশ।।/ তোমার স্বপ্ন আছে
+                  মধুর, আছে কত আবেশ/ মৌমাছি তো গুনগুনিয়ে হলো নিরুদ্দেশ।।/ হয়তো
+                  সাথে দেখতে পারি নতুন আশার আলো/ তোমার কাহিনীতে বাহিনী হয়ে, দিন
+                  রাত্রির আলো।।
+                </h4>
+              </div>
+            </div>
           </div>
 
           <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.5s">
@@ -651,11 +670,10 @@
           </div>
 
           <div class="wow fadeInUp col-md-12" data-wow-delay="0.5s">
-            <!-- WORK THUMB -->
             <div class="work-thumb">
-              <a href="images/2023/3.png" class="image-popup">
+              <a href="https://i.imgur.com/zhVBKyn.png" class="image-popup">
                 <img
-                  src="images/2023/3.png"
+                  src="https://i.imgur.com/zhVBKyn.png"
                   class="img-responsive"
                   alt="eS D"
                 />
@@ -715,7 +733,7 @@
         </div>
       </div>
       <br />
-      <div class="container hndtyped">
+      <div class="container hndtyped ppthought">
         <div class="row">
           <div class="wow fadeInUp col-md-6" data-wow-delay="0.5s">
             <!-- WORK THUMB -->
