--- a/app/audioplayer/index.html
+++ b/app/audioplayer/index.html
@@ -9,7 +9,7 @@
   </head>
   <link rel="stylesheet" href="player.css" />
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.jpg" />
-  <title>Audio Player - @itsEsD</title>
+  <title>Audio Player 🔉 - DSonic Music</title>
   <style>
     body {
       background-color: rgb(0, 0, 0);
@@ -347,12 +347,19 @@
       padding: 10px;
       padding-left: 10px;
       font-size: 20px;
-      background-color: #ffffff44;
+      background-color: #ffffff1b;
     }
     .sticon {
       top: 25px;
       right: 0px;
       position: fixed;
+    }
+    .ttil img {
+      width: 30px;
+      margin-right: 6px;
+      border-radius: 50%;
+      padding: 2px;
+      background-color: #e0e0e058;
     }
     .ttil a,
     .ttil a:hover {
@@ -505,9 +512,21 @@
     <section>
       <div class="plyrtt">
         <span class="ttil"
-          ><a target="_blank" href="https://soubhikdas.in"
-            >Es D | www.soubhikdas.in</a
-          ></span
+          ><a target="_blank" href="https://soubhikdas.in">
+            <!-- <img src="https://i.imgur.com/DDv4FgH.jpeg" /> -->
+            <img
+              src="https://scontent.fccu16-1.fna.fbcdn.net/v/t39.30808-6/377495863_691630446334334_8327282617802002060_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=KqZkC7hJ3x0Q7kNvgFz8qTy&_nc_ht=scontent.fccu16-1.fna&oh=00_AYCJHsUVDLeaJ9fB_8zTgHx7QH3S4l7jazs-ypeBkkmlEw&oe=664D7F91"
+            />DSonic Music |
+            <span style="font-size: 14px">
+              <img
+                src="/app/audioplayer/audio-eq.png"
+                style="
+                  width: 30px;
+                  background-color: transparent;
+                  filter: invert(1);
+                  margin-top: -5px;
+                "
+            /></span> </a></span
         ><span style="float: right"></span>
         <span class="sticon">
           <div class="crtlnkdv" id="crtlnkdv">
