--- a/app/audioplayer/index.html
+++ b/app/audioplayer/index.html
@@ -513,10 +513,8 @@
       <div class="plyrtt">
         <span class="ttil"
           ><a target="_blank" href="https://soubhikdas.in">
-            <!-- <img src="https://i.imgur.com/DDv4FgH.jpeg" /> -->
-            <img
-              src="https://scontent.fccu16-1.fna.fbcdn.net/v/t39.30808-6/377495863_691630446334334_8327282617802002060_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=KqZkC7hJ3x0Q7kNvgFz8qTy&_nc_ht=scontent.fccu16-1.fna&oh=00_AYCJHsUVDLeaJ9fB_8zTgHx7QH3S4l7jazs-ypeBkkmlEw&oe=664D7F91"
-            />DSonic Music |
+            <img src="https://i.imgur.com/DDv4FgH.jpeg" />
+            DSonic Music |
             <span style="font-size: 14px">
               <img
                 src="/app/audioplayer/audio-eq.png"
