--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -80,6 +80,7 @@
           <a class="social-icon" href="https://github.com/das-esd/dsonic"><i class="fab fa-github"></i></a>
           <a class="social-icon" href="https://www.youtube.com/@dsonicmusic"><i class="fab fa-youtube"></i></a>
           <a class="social-icon" href="https://www.facebook.com/DSonicPi"><i class="fab fa-facebook-f"></i></a>
+          <a class="social-icon" href="/app/audioplayer/?_DSonicMusic=Alarm-Rock::L2F1ZGlvcy9maWxlcy9hdWRpby9kc211c2ljL3RyYWNrcy9BbGFybSBSb2NrLm00YQ==::aHR0cHM6Ly9pLmltZ3VyLmNvbS9ERHY0RmdILmpwZWc=::RXMgRCAoU291YmhpayBEYXMp::"><i class="fa fa-music"  aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
