--- a/mfiles/index.html
+++ b/mfiles/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Gallery with Pagination</title>
+    <title>[MFiles] by Das</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        const videosPerPage = 20;
+        const videosPerPage = 18;
         const totalVideos = 180;
         const totalPages = Math.ceil(totalVideos / videosPerPage);
         const videoContainer = document.getElementById("videoContainer");
